# data-transducers

./: Cargo.toml  README.md  loc.txt
archive/: fn_clone_traits.rs  state_machine_test.rs
examples/: dynamic_dispatch_test.rs  ext_example.rs  state_machine_test.rs
src/: ext_value.rs  int_state_machine.rs  interface.rs  lib.rs  main.rs  qre.rs  state_machine.rs
src/old/: state_machine.rs
