[package]
name = "data-transducers"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = "0.1.7"
derive_more = "0.99.7"
enum_derive = "0.1.7"
